[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/objects/Spring.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.875, 5.75 )

[node name="Spring" type="Area2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 1 )

[node name="SpringPole" type="ColorRect" parent="."]
margin_left = -5.0
margin_top = -12.0
margin_right = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpringTop" type="ColorRect" parent="."]
margin_left = -31.5546
margin_top = -18.6817
margin_right = 32.4454
margin_bottom = -6.68174
rect_pivot_offset = Vector2( -95, -39.125 )
color = Color( 1, 0.960784, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.111359, -12.6817 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Spring_body_entered"]
